--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/KonradKlimczak/mik-skarpety#readme",
   "dependencies": {
-    "@angular/common": "~2.1.1",
+    "@angular/common": "^2.1.1",
     "@angular/compiler": "~2.1.1",
     "@angular/core": "~2.1.1",
     "@angular/forms": "~2.1.1",
@@ -34,7 +34,7 @@
     "@angular/platform-browser-dynamic": "~2.1.1",
     "@angular/router": "~3.1.1",
     "@angular/upgrade": "~2.1.1",
-    "angular-in-memory-web-api": "~0.1.13",
+    "angular-in-memory-web-api": "^0.1.13",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
