--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "mik-skarpety",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "MIK web page",
   "main": "index.html",
   "scripts": {
+    "development": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,10 @@
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
     "angular-material": "^1.1.1",
+    "angular-messages": "^1.5.8",
     "angular-ui-router": "^0.3.2"
+  },
+  "devDependencies": {
+    "lite-server": "^2.2.2"
   }
 }
