--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.html",
   "scripts": {
     "development": "lite-server",
+    "build": "gulp",
+    "build-app": "gulp build-app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +32,10 @@
     "angular-ui-router": "^0.3.2"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.0",
     "lite-server": "^2.2.2"
   }
 }
