--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
+    "angular-i18n": "^1.5.8",
     "angular-material": "^1.1.1",
     "angular-messages": "^1.5.8",
+    "angular-translate": "^2.13.0",
+    "angular-translate-loader-static-files": "^2.13.0",
     "angular-ui-router": "^0.3.2"
   },
   "devDependencies": {
