--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-i18n": "^1.5.8",
     "angular-material": "^1.1.1",
     "angular-messages": "^1.5.8",
+    "angular-sanitize": "^1.5.9",
     "angular-translate": "^2.13.0",
     "angular-translate-loader-static-files": "^2.13.0",
     "angular-ui-router": "^0.3.2"
