--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "MIK web page",
   "main": "index.html",
   "scripts": {
-    "development": "concurrently --kill-others \"lite-server\" \"npm run scss\"",
+    "predevelopment": "node-sass scss/ -o css/",
+    "development": "concurrently --kill-others \"lite-server\" \"npm run watch-scss\"",
     "build": "gulp",
     "build-app": "gulp build-app",
-    "scss": "node-sass -w scss/ -o css/",
+    "build-scss": "node-sass scss/ -o css/",
+    "watch-scss": "node-sass -w scss/ -o css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
