--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,9 +1,9 @@
 {
     "env": {
-        "browser": false,
+        "browser": true,
         "commonjs": false,
         "es6": false,
-        "node": true
+        "node": false
     },
     "parserOptions": {
         "ecmaFeatures": {
@@ -19,5 +19,8 @@
         "no-unused-vars": "warn",
         "constructor-super": "warn",
         "valid-typeof": "warn"
+    },
+    "globals": {
+        "angular": true
     }
 }
