--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build-app": "gulp build-app",
     "build-scss": "node-sass scss/ -o css/",
     "watch-scss": "node-sass -w scss/ -o css/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start karma.conf.js",
+    "test-init": "karma init karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -27,23 +28,29 @@
   },
   "homepage": "https://github.com/KonradKlimczak/mik-skarpety#readme",
   "dependencies": {
-    "angular": "^1.6.1",
-    "angular-animate": "^1.6.1",
-    "angular-aria": "^1.6.1",
-    "angular-i18n": "^1.6.1",
+    "angular": "1.5.9",
+    "angular-animate": "1.5.9",
+    "angular-aria": "1.5.9",
+    "angular-i18n": "1.5.9",
     "angular-material": "^1.1.1",
-    "angular-messages": "^1.6.1",
-    "angular-sanitize": "^1.6.1",
-    "angular-translate": "^2.13.0",
-    "angular-translate-loader-static-files": "^2.13.0",
+    "angular-messages": "1.5.9",
+    "angular-sanitize": "1.5.9",
+    "angular-translate": "^2.13.1",
+    "angular-translate-loader-static-files": "^2.13.1",
     "angular-ui-router": "^0.3.2"
   },
   "devDependencies": {
+    "angular-mocks": "1.5.9",
     "concurrently": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
+    "jasmine": "^2.5.2",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
     "lite-server": "^2.2.2",
     "node-sass": "^4.1.1"
   }
