--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "predevelopment": "node-sass scss/ -o css/",
     "development": "concurrently --kill-others \"lite-server\" \"npm run watch-scss\"",
-    "build": "gulp",
-    "build-app": "gulp build-app",
+    "build": "gulp build-app",
     "build-scss": "node-sass scss/ -o css/",
     "watch-scss": "node-sass -w scss/ -o css/",
     "test": "karma start karma.conf.js",
@@ -43,8 +42,10 @@
     "angular-mocks": "1.5.9",
     "concurrently": "^3.1.0",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-uglify": "^2.0.0",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
