--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,11 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
-dist/*
+dist/lib.min.css
+dist/lib.min.js
+dist/data/*
+dist/templates/*
+dist/translations/*
 css/*
 
 # Dependency directories
