--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "predevelopment": "node-sass scss/ -o css/",
     "development": "concurrently --kill-others \"lite-server\" \"npm run watch-scss\"",
+    "production": "lite-server -c ./dist/lite-server.prod.conf",
     "build": "gulp build-app",
     "build-scss": "node-sass scss/ -o css/",
     "watch-scss": "node-sass -w scss/ -o css/",
