--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mik-skarpety",
-  "version": "0.0.2",
+  "version": "1.0.1",
   "description": "MIK web page",
   "main": "index.html",
   "scripts": {
@@ -8,10 +8,7 @@
     "development": "concurrently --kill-others \"lite-server\" \"npm run watch-scss\"",
     "production": "lite-server -c ./dist/lite-server.prod.conf",
     "build": "gulp build-app",
-    "build-scss": "node-sass scss/ -o css/",
-    "watch-scss": "node-sass -w scss/ -o css/",
-    "test": "karma start karma.conf.js",
-    "test-init": "karma init karma.conf.js"
+    "test": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
