--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "predevelopment": "node-sass scss/ -o css/",
-    "development": "concurrently --kill-others \"lite-server\" \"npm run watch-scss\"",
+    "development": "concurrently --kill-others \"lite-server\" \"node-sass -w scss/ -o css/\"",
     "production": "lite-server -c ./dist/lite-server.prod.conf",
     "build": "gulp build-app",
     "test": "karma start karma.conf.js"
