--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MIK web page",
   "main": "index.html",
   "scripts": {
+    "start": "node server.js",
     "predevelopment": "node-sass scss/ -o css/",
     "development": "concurrently --kill-others \"lite-server\" \"node-sass -w scss/ -o css/\"",
     "production": "lite-server -c ./dist/lite-server.prod.conf",
@@ -37,7 +38,11 @@
     "angular-sanitize": "1.5.9",
     "angular-translate": "^2.13.1",
     "angular-translate-loader-static-files": "^2.13.1",
-    "angular-ui-router": "^0.3.2"
+    "angular-ui-router": "^0.3.2",
+    "connect": "^3.7.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.4",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.9",
